--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,6 +22,16 @@
                   <i class="uil uil-search"></i>
                   <input type="search" placeholder="Search For a Friend">
              </div>
+             <!-- ----------------------------------------changes----------------------------------------------------------- -->
+             <div class="mid">
+                <button>
+                    <a href="" >Request</a>
+                </button>&nbsp&nbsp
+                <button>
+                    <a href="" id="butn">Suggestions</a>
+                </button>
+            </div>
+            <!-- ---------------------------------------------changes----------------------------------------------------------------- -->
              <div class="right_navbar">
                  <li><a href="/home" class="btn"><i class="uil uil-home" ></i></a></li>
                  <li><a href="/upload" class="btn"><i class="uil uil-plus" > </i></a></li>
