Added route for /friendlist, /request,/suggestions

--- a/views/friendlist.html
+++ b/views/friendlist.html
@@ -31,10 +31,10 @@
             </div>
             <div class="mid">
                 <button id="butn">
-                    <a href="request.html">Request</a>
+                    <a href="/request">Request</a>
                 </button>&nbsp&nbsp
                 <button id="butn">
-                    <a href="suggestions.html" >Suggestions</a>
+                    <a href="/suggestions" >Suggestions</a>
                 </button>
             </div>
             <div class="right_navbar">
