--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,10 +30,10 @@
         </div>
         <div class="mid">
           <button>
-              <a href="" >Request</a>
+              <a href="/request" >Request</a>
           </button>&nbsp&nbsp
           <button>
-              <a href="" id="butn">Suggestions</a>
+              <a href="/suggestions" id="butn">Suggestions</a>
           </button>
       </div>
         <div class="right_navbar">
