--- a/views/request.html
+++ b/views/request.html
@@ -31,10 +31,10 @@
             </div>
             <div class="mid">
                 <button id="Active">
-                    <a href="" >Request</a>
+                    <a href="/request" >Request</a>
                 </button>&nbsp&nbsp
                 <button>
-                    <a href="suggestions.html" id="butn">Suggestions</a>
+                    <a href="/suggestions" id="butn">Suggestions</a>
                 </button>
             </div>
             <div class="right_navbar">
