--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -25,10 +25,10 @@
              <!-- ----------------------------------------changes----------------------------------------------------------- -->
              <div class="mid">
                 <button>
-                    <a href="" >Request</a>
+                    <a href="/request" >Request</a>
                 </button>&nbsp&nbsp
                 <button>
-                    <a href="" id="butn">Suggestions</a>
+                    <a href="/suggestions" id="butn">Suggestions</a>
                 </button>
             </div>
             <!-- ---------------------------------------------changes----------------------------------------------------------------- -->
