--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,10 +25,10 @@
              <!-- ----------------------------------------changes----------------------------------------------------------- -->
              <div class="mid">
                 <button>
-                    <a href="" >Request</a>
+                    <a href="/request" >Request</a>
                 </button>&nbsp&nbsp
                 <button>
-                    <a href="" id="butn">Suggestions</a>
+                    <a href="/suggestions" id="butn">Suggestions</a>
                 </button>
             </div>
             <!-- ---------------------------------------------changes----------------------------------------------------------------- -->
@@ -57,7 +57,7 @@
                         </div>
                         <div style="margin-left: auto; margin-right: auto;; font-size: 25px; display: flex; grid-template-columns: auto 120px; column-gap: 10rem; margin-left: 100px; padding: 10px;">
                              <div id="Friends" action="/profile">
-                                 Friends : <%=friends%>
+                                 <a href="/friendlist">Friends : <%=friends%></a>                                 
                              </div>
                              <div id="Posts" action="/profile">
                                  Post : <%=posts%>
