--- a/views/suggestion.html
+++ b/views/suggestion.html
@@ -31,10 +31,10 @@
             </div>
             <div class="mid">
                 <button id="butn">
-                    <a href="request.html">Request</a>
+                    <a href="/request">Request</a>
                 </button>&nbsp&nbsp
                 <button id="Active">
-                    <a href="" >Suggestions</a>
+                    <a href="/suggestions" >Suggestions</a>
                 </button>
             </div>
             <div class="right_navbar">
