suggestion route in home and message route in chat

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -62,88 +62,7 @@
                         </div>
                     </button>
                     <%});%>
-                    <!-- <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 1px;">Name1</h3>
-                        &nbsp;   <span">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button>
-                    <button class="head">
-                        <div>
-                           <img src="images/man.png" alt="" class="images">&nbsp;
-                        </div>
-                        <div>
-                           <h3 style="padding: 5px; margin-top: 3px;">Name1</h3>
-                        &nbsp;   <span style="margin-left: 3px;">Last Message</span>
-                        </div>
-                    </button> -->
-
+                   
                     
                 </div>
             </div>
@@ -170,37 +89,9 @@
                                 </div>
                             <% } %>
                         <%});%>
-                        <!-- <div class="mymsg msguser">
-                            <p>Hello<br><span>12:17</span></p>
-                        </div>
-                        <div class="mymsg msgme">
-                            <p>How are You styam.<br><span>12:15</span></p>
-                        </div>
-                        <div class="mymsg msguser">
-                            <p>fine Mayank ! tell me about Yourself<br><span>12:17</span></p>
-                        </div>
-                        <div class="mymsg msgme">
-                            <p>Good ! I am also fine. satyam<br><span>12:15</span></p>
-                        </div>
-                        <div class="mymsg msguser">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nemo aut dolore. Magni eveniet officiis inventore quisquam aut nostrum enim!<br><span>12:17</span></p>
-                        </div>
-                        <div class="mymsg msgme">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, totam.<br><span>12:15</span></p>
-                        </div>
-                        <div class="mymsg msguser">
-                            <p>Lorem ipsum dolor sit amet.<br><span>12:17</span></p>
-                        </div>
-                        <div class="mymsg msgme">
-                            <p>Hi<br><span>12:15</span></p>
-                        </div>
-                        <div class="mymsg msguser">
-                            <p>Hello<br><span>12:17</span></p>
-                        </div>
-                    </div> -->
-                    <div class="lowerblock">
-                        <form action="#">
-                            <input type="text" placeholder="Type Message Here...." id="lowerblocktext" required>
+                       <div class="lowerblock">
+                        <form action="/message" method="post">
+                            <input type="text" placeholder="Type Message Here...." id="lowerblocktext" name="baat" required>
                             <button type="submit" id="click">Send</button>
                         </form>
                     </div>
