--- a/views/login.html
+++ b/views/login.html
@@ -7,8 +7,6 @@
     <title>Form</title>
     <link rel="stylesheet" href="style/login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <!-- <script src = "Form.js"></script>
-    <script src="require.js"></script> -->
   </head>
   <body>
     <form class="container" action="/login" method="post">
@@ -37,7 +35,7 @@
       </div>
       <br />
       <button type="submit" class="login">Login</button><br /><br />
-      <a href="" id="forgetpassword">Forget Password ?</a><br />
+      <!-- <a href="" id="forgetpassword">Forget Password ?</a><br /> -->
       <span id="account">Don't Have an Account </span
       ><a href="/signup" id="signup">Sign Up</a>
     </form>
