--- a/views/upload.html
+++ b/views/upload.html
@@ -15,7 +15,7 @@
         <header>Drag & Drop To Upload File</header>
         <span>Or</span>
         <button>Select File</button>
-        <input type="file" hidden>
+        <input name="Post" type="file" hidden>
     </div>
     <div class="caption">
         <div>Add Caption Here</div>
