adremoved the hyperlink of friends-count of friendprofile page

--- a/views/friendprofile.ejs
+++ b/views/friendprofile.ejs
@@ -57,7 +57,7 @@
                         </div>
                         <div style="margin-left: auto; margin-right: auto;; font-size: 25px; display: flex; grid-template-columns: auto 120px; column-gap: 10rem; margin-left: 100px; padding: 10px;">
                              <div id="Friends" action="/profile">
-                                 <a href="">Friends : <%=friends%></a>                                 
+                                 <p>Friends : <%=friends%></p>                              
                              </div>
                              <div id="Posts" action="/profile">
                                  Post : <%=posts%>
