--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,14 +73,14 @@
                 </div>
                 <div class="name">
                   <h3><%=item.fullname%></h3>
-                  <small>10 Min ago</small>
+                  <small><%= moment(item.tmstp).fromNow() %> </small>
                 </div>
               </div>
 
               <div class="photo">
                 <img src="<%=item.image%>" alt="" class="post_photo" />
               </div>
-
+              <p style="font-size: 2em;"><%=item.caption%></p> 
               <div class="action-button">
                 <div class="like_comment">
                   <span><i class="uil uil-heart"></i></span>
@@ -102,13 +102,13 @@
                 <span
                   ><img src="images/profile4.png" alt="" class="image"
                 /></span>
-                <p>Likes : <b><%=item.likes%></b></p>
+                &nbsp;&nbsp;
+                <p>Liked by <b><%=item.likes%> Friends</b></p>            
               </div>
 
-              <div class="caption">
-                <p>
-                  <b><%=item.uploaderID%> : </b><%=item.caption%>
-                </p>
+              <div class="caption">         
+                  
+                                  
               </div>
 
               <div class="comments text-muted">view all 23 comments</div>
