Added Name on each post in home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,7 +72,7 @@
                   <img src="images/man.png" alt="" class="images" />
                 </div>
                 <div class="name">
-                  <h3><%=item.uploaderID%></h3>
+                  <h3><%=item.fname%> <%=item.lname%></h3>
                   <small>10 Min ago</small>
                 </div>
               </div>
