Completed Suggestions Page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
               <a href="/request" >Request</a>
           </button>&nbsp&nbsp
           <button>
-              <a href="/suggestions" id="butn">Suggestions</a>
+              <a href="/suggestion" id="butn">Suggestions</a>
           </button>
       </div>
         <div class="right_navbar">
